RESOLVED FIXED267360
align-content doesn't move atomic inlines (images, form controls) that are direct children
https://bugs.webkit.org/show_bug.cgi?id=267360
Summary align-content doesn't move atomic inlines (images, form controls) that are di...
fantasai
Reported 2024-01-10 12:46:39 PST
Created attachment 469362 [details] testcase Overview: align-content works fine on most inline and block-level content, but fails to move atomic inlines that are direct children of the block container. Steps to Reproduce: 1. Load testcase. Expected Results: All content is simultaneously centered. Actual Results: Text and contents of an inline box are moved, but form controls and images are not.
Attachments
testcase (943 bytes, text/html)
2024-01-10 12:46 PST, fantasai
no flags
Radar WebKit Bug Importer
Comment 1 2024-01-10 12:46:58 PST
EWS
Comment 2 2024-01-12 18:26:20 PST
Committed 273003@main (01412a0f52c6): <https://commits.webkit.org/273003@main> Reviewed commits have been landed. Closing PR #22611 and removing active labels.
Tim Nguyen (:ntim)
Comment 3 2025-01-03 07:21:31 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/49903
Note You need to log in before you can comment on or make changes to this bug.