Make direct atomic inline children move for align-content on blocks. https://bugs.webkit.org/show_bug.cgi?id=267360 rdar://120802276

Reviewed by Alan Baradlay.

Moves the RenderBox of atomic inlines, not just their InlineDisplay::Box.

* LayoutTests/imported/w3c/web-platform-tests/css/css-align/blocks/align-content-block-012-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-align/blocks/align-content-block-012.html: Added.
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::shiftLinesBy): Move RenderBoxes associated with moved InlineDisplay::Boxes.

Canonical link: https://commits.webkit.org/273003@main